--- a/assets/custome.css
+++ b/assets/custome.css
@@ -271,3 +271,14 @@ span.infobox_rate {
 .daterangepicker thead .fa.fa-chevron-right, .daterangepicker thead .fa.fa-chevron-left{
     transform: rotate(180deg);
 }
+
+.my-statistics .m-widget24 .m-widget24__item .m-widget24__stats{
+    margin-top: -2.43rem;
+}
+.my-statistics .m-widget24 .m-widget24__item .progress{
+    margin-top: 1.14rem;
+    margin-bottom: 2rem;
+}
+.my-statistics .m-widget24 .m-widget24__item .m-widget24__title{
+    margin-top: 2rem;
+}
