--- a/assets/custome.css
+++ b/assets/custome.css
@@ -282,3 +282,6 @@ span.infobox_rate {
 .my-statistics .m-widget24 .m-widget24__item .m-widget24__title{
     margin-top: 2rem;
 }
+.m-card-profile .m-card-profile__pic img{
+    max-width: 150px ;
+}
