--- a/assets/custome.css
+++ b/assets/custome.css
@@ -297,3 +297,29 @@ span.infobox_rate {
     padding-bottom: 13px;
     display: block;
 }
+.message-list li{
+    margin-bottom: 10px;
+}
+.message-list a{
+    border-radius: 8px;
+    padding: 15px;
+    background-color: #fbfbfb;
+    display: block;
+    width: 100%;
+    margin-bottom: 15px;
+}
+.m-badge.m-badge--dot-small {
+    padding: 0;
+    line-height: 20px;
+    min-height: 20px;
+    min-width: 20px;
+    height: 20px;
+    width: 20px;
+    border-radius: 100%;
+}
+.m-topbar .m-topbar__nav.m-nav>.m-nav__item>.m-nav__link .m-nav__link-badge {
+    right: 50%;
+    margin-right: -21px;
+    position: absolute;
+    top: 14px;
+}
