--- a/assets/custome.css
+++ b/assets/custome.css
@@ -393,7 +393,13 @@ select.year-select:hover{
 }
 #m_chart_revenue_change text{
     font-family: 'Tajawal' , sans-serif !important;
-    font-size: 18px !important;
     font-weight: 500 !important;
+}
+.best-provider-table img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 1px solid #716aca;
 }
 /*End New Css*/
