--- a/assets/custome.css
+++ b/assets/custome.css
@@ -403,3 +403,20 @@ select.year-select:hover{
     border: 1px solid #716aca;
 }
 /*End New Css*/
+/*new 12/11 */
+.kv-file-upload{
+    display: none !important;
+}
+.file-drop-zone-title{
+    padding: 30px 10px;
+}
+.fw-500{
+    font-weight: 500 !important;
+}
+.form-control-feedback{
+    color: red;
+}
+#map_1{
+    width: 100%;
+    height: 300px;
+}
