--- a/assets/custome.css
+++ b/assets/custome.css
@@ -420,3 +420,57 @@ select.year-select:hover{
     width: 100%;
     height: 300px;
 }
+.dash-border{
+    border-bottom: 1px dashed #ebedf2;
+    padding-top: 25px;
+    margin-bottom: 25px;
+    margin-left: -2.2rem;
+    margin-right: -2.2rem;
+    display: block;
+}
+.inc-dec-container{
+    position: relative;
+    text-align: center;
+    width: 100px;
+}
+
+.inc-dec-container button {
+    width: 22px;
+    position: absolute;
+    padding: 0;
+    height: 26px;
+    border-radius: 5px;
+    z-index: 2;
+    top: 0;
+    border: 0;
+    background-color: #D4D5D1;
+    color: #000;
+    cursor: pointer;
+    outline: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.inc-dec-container button.minus-btn {
+    left: 0;
+}
+.inc-dec-container button.plus-btn {
+    right: 0;
+    padding-bottom: 2px;
+}
+.inc-dec-container input{
+    width: 100%;
+    height: 26px;
+    border: 0;
+    text-align: center;
+    border-radius: 5px;
+}
+.services-list label{
+    vertical-align: top;
+    font-weight: 500;
+}
+.services-list .form-control-feedback{
+    font-weight: 400 !important;
+}
