--- a/assets/custome.css
+++ b/assets/custome.css
@@ -474,3 +474,9 @@ select.year-select:hover{
 .services-list .form-control-feedback{
     font-weight: 400 !important;
 }
+.specialPrice-card{
+    border-radius: 5px;
+    background-color: #f5f5f5;
+    padding: 7px;
+    border-right: 5px solid #34bfa3;
+}
