--- a/assets/custome.css
+++ b/assets/custome.css
@@ -480,3 +480,6 @@ select.year-select:hover{
     padding: 7px;
     border-right: 5px solid #34bfa3;
 }
+.number-cunt{
+    background-color: rgb(235, 235, 228);
+}
